// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled switch 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {},
    ]
  }
  value={true}
/>
`;

exports[`renders off switch 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {},
    ]
  }
  value={false}
/>
`;

exports[`renders on switch 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgba(0, 0, 0, 0.5)"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {},
    ]
  }
  tintColor="rgba(0, 0, 0, 0.5)"
  value={true}
/>
`;

exports[`renders switch with secondary color 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgba(98, 91, 113, 0.5)"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {},
    ]
  }
  thumbTintColor="rgba(98, 91, 113, 1)"
  tintColor="rgba(98, 91, 113, 0.5)"
  value={true}
/>
`;
